# learning

./: README.md
epoll/: .gitignore  CMakeLists.txt  readme.md
epoll/src/: CMakeLists.txt  main.cc
epoll/src/network/: little_server.cc  little_server.h
ffmpeg/: .gitignore  CMakeLists.txt  README.md  pre_install.sh
ffmpeg/include/libavutil/: error.h  ffversion.h
ffmpeg/libs/: Readme.md
ffmpeg/src/: CMakeLists.txt  data_type.h  main.cc  media_play.cc  media_play.h  opengl_window.cc  opengl_window.h  utilty.hpp
ffmpeg/src/scripts/opengl/: Yuv420ToRgb.frag  Yuv420ToRgb.vert
ffmpeg/test/: CMakeLists.txt
ffmpeg/test/openssl/include/openssl/: opensslconf.h
ffmpeg/test/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
ffmpeg/test/openssl/ssl/man/man1/: c_rehash.1  ca.1  dgst.1  x509.1
ffmpeg/test/openssl/ssl/man/man3/: EVP_EncryptInit.3  EVP_PKEY_CTX_ctrl.3  OPENSSL_VERSION_NUMBER.3  SSL_CTX_set_psk_client_callback.3  engine.3
ffmpeg/test/openssl/ssl/man/man5/: config.5  x509v3_config.5
ffmpeg/test/openssl/ssl/man/man7/: des_modes.7
ffmpeg/test/src/: demuxing_decoding.c  opengl_test  opengl_test.cc  openssl_test.cc  openssl_test.h  openssl_test_client.cc  openssl_test_server.cc
